[gd_scene load_steps=3 format=3 uid="uid://cb0m87ahji6ne"]

[ext_resource type="Script" path="res://prog_122b.gd" id="1_0273p"]
[ext_resource type="Theme" uid="uid://cv1o3wmjapddp" path="res://BigFont.tres" id="2_pcu4m"]

[node name="prog_122b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0273p")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 494.0
offset_top = 508.0
offset_right = 682.0
offset_bottom = 600.0
theme = ExtResource("2_pcu4m")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 704.0
offset_top = 510.0
offset_right = 892.0
offset_bottom = 602.0
theme = ExtResource("2_pcu4m")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 921.0
offset_top = 510.0
offset_right = 1109.0
offset_bottom = 602.0
theme = ExtResource("2_pcu4m")
text = "Exit"

[node name="lblHours" type="Label" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 12.0
offset_right = 169.0
offset_bottom = 60.0
theme = ExtResource("2_pcu4m")
text = "Hours"

[node name="lblPay" type="Label" parent="."]
layout_mode = 0
offset_left = 187.0
offset_top = 11.0
offset_right = 327.0
offset_bottom = 59.0
theme = ExtResource("2_pcu4m")
text = "Pay"

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = 67.0
offset_right = 328.0
offset_bottom = 603.0

[node name="ItemListHours" type="ItemList" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 67.0
offset_right = 166.0
offset_bottom = 603.0

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
